syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/overlays_dudes";
package messages.overlays_dudes;

message DudeSettings {
	string color = 1;
	string eyes_color = 2;
	string cosmetics_color = 3;
	int32 max_life_time = 4;
	int32 gravity = 5;
	float scale = 6;
	bool sounds_enabled = 7;
	float sounds_volume = 8;
	bool visible_name = 9;
	int32 grow_time = 10;
	int32 grow_max_scale = 11;
}

message MessageBoxSettings {
	int32 border_radius = 1;
	string box_color = 2;
	string font_family = 3;
	int32 font_size = 4;
	int32 padding = 5;
	int32 show_time = 6;
	string fill = 7;
	bool enabled = 8;
}

message NameBoxSettings {
	string font_family = 1;
	int32 font_size = 2;
	repeated string fill = 3;
	string line_join = 4;
	int32 stroke_thickness = 5;
	string stroke = 6;
	repeated float fill_gradient_stops = 7;
	int32 fill_gradient_type = 8;
	string font_style = 9;
	string font_variant = 10;
	int32 font_weight = 11;
	bool drop_shadow = 12;
	float drop_shadow_alpha = 13;
	float drop_shadow_angle = 14;
	float drop_shadow_blur = 15;
	float drop_shadow_distance = 16;
	string drop_shadow_color = 17;
}

message IgnoreSettings {
	bool ignore_commands = 1;
	bool ignore_users = 2;
	repeated string users = 3;
}

message SpitterEmoteSettings {
	bool enabled = 1;
}

message Settings {
	DudeSettings dude_settings = 1;
	MessageBoxSettings message_box_settings = 2;
	NameBoxSettings name_box_settings = 3;
	optional string id = 4;
	IgnoreSettings ignore_settings = 5;
	SpitterEmoteSettings spitter_emote_settings = 6;
}

message GetRequest {
	string id = 1;
}

message GetAllResponse {
	repeated Settings settings = 1;
}

message UpdateRequest {
	string id = 1;
	Settings settings = 2;
}

message DeleteRequest {
	string id = 1;
}
